--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@dchicchon/puppet",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "tools for wrangling microservices",
   "type": "module",
   "main": "bin/index.js",
   "scripts": {
+    "patch": "npm version patch",
+    "publish": "npm run patch && npm publish --access public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
