--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "main": "bin/index.js",
   "scripts": {
-    "patch": "npm version patch",
-    "publish": "npm run patch && npm publish --access public",
+    "patch": "npm version patch && npm publish --access public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
